# axum-sse

./: .env  Cargo.toml  LICENSE  README.md
assets/: index.html
src/: config.rs  main.rs
